@@ -39,22 +39,23 @@ t/Tags-Output-Raw/01-use.t
 t/Tags-Output-Raw/02-version.t
 t/Tags-Output-Raw/03-new.t
 t/Tags-Output-Raw/04-finalize.t
-t/Tags-Output-Raw/05-open_tags.t
-t/Tags-Output-Raw/06-put-simple_element.t
-t/Tags-Output-Raw/07-put-element.t
-t/Tags-Output-Raw/08-put-preserve_from_attribute.t
-t/Tags-Output-Raw/09-put-preserve_from_constructor.t
-t/Tags-Output-Raw/10-put-comment.t
-t/Tags-Output-Raw/11-put-no_simple.t
-t/Tags-Output-Raw/12-put-raw.t
-t/Tags-Output-Raw/13-put-cdata.t
-t/Tags-Output-Raw/14-put-output_handler.t
-t/Tags-Output-Raw/15-put-error.t
-t/Tags-Output-Raw/16-put-instruction.t
-t/Tags-Output-Raw/17-put-data_callback.t
-t/Tags-Output-Raw/18-put-skip_bad_tags.t
-t/Tags-Output-Raw/19-put-auto_flush.t
-t/Tags-Output-Raw/20-put-end_of_element.t
+t/Tags-Output-Raw/05-open_elements.t
+t/Tags-Output-Raw/06-open_tags.t
+t/Tags-Output-Raw/07-put-simple_element.t
+t/Tags-Output-Raw/08-put-element.t
+t/Tags-Output-Raw/09-put-preserve_from_attribute.t
+t/Tags-Output-Raw/10-put-preserve_from_constructor.t
+t/Tags-Output-Raw/11-put-comment.t
+t/Tags-Output-Raw/12-put-no_simple.t
+t/Tags-Output-Raw/13-put-raw.t
+t/Tags-Output-Raw/14-put-cdata.t
+t/Tags-Output-Raw/15-put-output_handler.t
+t/Tags-Output-Raw/16-put-error.t
+t/Tags-Output-Raw/17-put-instruction.t
+t/Tags-Output-Raw/18-put-data_callback.t
+t/Tags-Output-Raw/19-put-skip_bad_tags.t
+t/Tags-Output-Raw/20-put-auto_flush.t
+t/Tags-Output-Raw/21-put-end_of_element.t
 t/Tags-Output/01-use.t
 t/Tags-Output/02-version.t
 t/Tags-Output/03-new.t
