@@ -10,6 +10,7 @@ build_requires:
   IO::Scalar: 0
   Test::More: 0
   Test::NoWarnings: 0
+  Test::Warn: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
