@@ -33,6 +33,7 @@ test_requires 'File::Object' => 0.03;
 test_requires 'IO::Scalar' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
+test_requires 'Test::Warn' => 0;
 tests_recursive;
 version '0.09';
 
