@@ -55,7 +55,6 @@ TODO
     </head>
 65. Pridat komentare k testum.
 67. atributy by nemely poustet nonascii znaky v jine forme, nez encodovane
-68. Prejmenotat open_tags() na open_elements() ze zpetnou kompatibilitou.
 69.
 
 Applied
@@ -256,3 +255,6 @@ NONE [20191008] skim
 58. Udelat univerzalni Tags::Output, abych nemusel rucne ve skriptech prepinat?
 Tags::Output existuje
 OK [20200426] skim
+
+68. Prejmenovat open_tags() na open_elements() ze zpetnou kompatibilitou.
+OK [20200427] skim
